[tool.poetry]
name = "LDL"
version = "0.1.0"
description = ""
authors = ["radka-j"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
torch = ">=1.3"
jupyter = "^1.0.0"
numpy = "^1.26.4"
matplotlib = "^3.8.3"

[tool.poetry.dev-dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
