[tool.poetry]
name = "LDL"
version = "0.1.0"
description = ""
authors = ["radka-j"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = ">=1.3"
jupyter = "^1.0.0"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
lightning = "^2.5.0.post0"
transformers = "^4.47.1"
datasets = "^3.2.0"
torchvision = "^0.20.1"
wandb = "^0.19.1"
ucimlrepo = "^0.0.7"
autoemulate = "^0.2.1"

[tool.poetry.dev-dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
